# ChessTrainingOptimization

./: .gitignore  ProjectPresentation.pptx  README.md  pyproject.toml
doc/: Demo
src/: .gitignore  Makefile  app.py  chess_engine.cpp  chess_engine.hpp  chessbridge.cpp  clean_models.sh  fixed_train.py  game_manager.cpp  game_manager.hpp  index.html  init_version0.py  install_onnxrt.sh  nn.py  openings.txt  pyproject.toml  selfplay_datagen.py  test.py
