[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asciimatics>=1.15.0",
    "cupy-cuda12x>=13.6.0",
    "gputil>=1.4.0",
    "lightning>=2.6.0",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy<2.0",
    "psutil>=7.1.3",
    "python-chess==0.31.4",
    "requests>=2.32.5",
    "tensorboard>=2.20.0",
]
